[gd_scene load_steps=2 format=3 uid="uid://poquaysd52i2"]

[ext_resource type="Script" uid="uid://dw5xfcsl5ov65" path="res://scripts/DialogueManager.gd" id="1_m70fm"]

[node name="DialogueManager" type="CanvasLayer"]
visible = false
script = ExtResource("1_m70fm")

[node name="Background" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.39215687)

[node name="DialogBox" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="DialogBox"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 300
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 300

[node name="VBoxContainer" type="VBoxContainer" parent="DialogBox/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="DialogBox/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextLabel" type="RichTextLabel" parent="DialogBox/MarginContainer/VBoxContainer"]
layout_mode = 2
